--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,10 @@ body {
   min-height: 100vh;
 }
 
+.container{
+  display: flex;
+}
+
 /* Карточки */
 .card {
   background-color: #2c2c3a;
@@ -22,6 +26,21 @@ body {
   width: 100%;
   max-width: 400px;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.card_center{
+  background-color: #2c2c3a;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
 }
